Design update. This definitely doesn't have to be what it looks like, just trying to do something. All of the buttons and text are assigned names/strings as we did in the homework.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CSC425-Project</string>
+    <string name="headerTextView">Flint Water Info</string>
+    <string name="volunteerButton">Volunteer</string>
+    <string name="donateButton">Donate</string>
+    <string name="resourceButton">Get Resources</string>
 </resources>
