--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,19 +8,21 @@
     <string name="Donate">Donate</string>
     <string name="Volunteer">Volunteer</string>
     <string name="DonatePageIntroText">
-            If you would like to donate water to Flint, you can donate to the
-            locations listed below.</string>
-    <string name="DonateLoc1Text">Donations of 100 or less cases of water
-            \n Please go to: \n Catholic Charities Center for Hope \n 517 E. Fifth Ave
+            Water Donations</string>
+    <string name="DonateLoc1Text">100 or less cases:\n
+            \n Catholic Charities Center for Hope \n 517 E. Fifth Ave
             \n Flint, MI 48503 \n Monday-Friday 9am-4pm</string>
     <string name="DonateMapButton1">MAP</string>
     <string name="DonateLoc2Text">Red Cross \n 1401 Grand Traverse \n Flint, MI 48503
             \n Saturday-Sunday 9am-4pm</string>
     <string name="DonateMapButton2">MAP</string>
-    <string name="DonateLoc3Text">Donations greater than 100 cases
+    <string name="DonateLoc3Text">More than 100 cases:\n
             \n Please go to: \n Food Bank of Eastern Michigan \n 2300 Lapeer Rd
             \n Flint, MI 48503 \n Monday-Friday 8am-4:30pm</string>
     <string name="DonateMapButton3">MAP</string>
+    <string name="FinancialDonationsText">Financial Donations</string>
+    <string name="DonateFinancialAddress">www.FlintKids.org</string>
+    <string name="DonateFinancialPhone">United Way 810-232-8121</string>
 
 
 </resources>
