added a news activity and connected it with the main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="FinancialDonationsText">Financial Donations</string>
     <string name="DonateFinancialAddress">www.FlintKids.org</string>
     <string name="DonateFinancialPhone">United Way 810-232-8121</string>
+    <string name="newsButton">News</string>
 
 
 </resources>
