--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="title_activity_news__read">News_Read</string>
     <string name="news_button">read more</string>
     <string name="title_activity_news_web">NewsWeb</string>
+    <string name="title_activity_news_read">NewsRead</string>
 
 </resources>
